# AP_VIO

./: .gitignore  .gitmodules  CMakeLists.txt  EQF_VIO_internal_2021-11-18_16:01:41.csv  EQF_VIO_internal_2021-11-18_16:11:24.csv  EQVIO_config.yaml  EQVIO_config_higher_performance.yaml  EQVIO_config_simple.yaml  EQVIO_config_template.yaml  README.md  intrinsics.yaml  intrinsics_example.yaml  main.cpp  mavhelper.cpp  package.xml  undistort.yaml
include/: mavhelper.h
include/eqf_vio/: CSVLine.h  CSVReader.h  EqFMatrices.h  Geometry.h  IMUVelocity.h  LoopTimer.h  VIOFilter.h  VIOFilterSettings.h  VIOGroup.h  VIOState.h  VIOWriter.h  VisionMeasurement.h  aofstream.h  dataStream.h
include/eqvio/: LoopTimer.h  VIOFilter.h  VIOFilterSettings.h  VIOWriter.h  dataStream.h
include/eqvio/mathematical/: EqFMatrices.h  Geometry.h  VIOGroup.h  VIOState.h  VIO_eqf.h  VisionMeasurement.h
include/mavlink/ardupilotmega/: version.h
include/mavlink/common/: common.h  version.h
include/mavlink/icarous/: version.h
include/mavlink/minimal/: version.h
include/mavlink/uAvionix/: version.h
libs/: CMakeLists.txt
scripts/: analyse_eqvio_output.py  mav2poses.py
src/: EqFMatrices.cpp  Geometry.cpp  IMUVelocity.cpp  LoopTimer.cpp  VIOFilter.cpp  VIOGroup.cpp  VIOState.cpp  VIOWriter.cpp  VisionMeasurement.cpp  dataStream.cpp  main.cpp  main_ap.cpp  mavhelper.cpp
src/mathematical/: EqFMatrices.cpp  Geometry.cpp  IMUVelocity.cpp  VIOGroup.cpp  VIOState.cpp  VIO_eqf.cpp  VisionMeasurement.cpp
src/mathematical/coordinateSuite/: euclid.cpp  invdepth.cpp  normal.cpp
